nabi icon update(nabi.png->nabi.svg)
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@513 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2004-12-03  Choe Hwanjin <krisna@kldp.org>
+	* 나비 아이콘 새로 올림 (bluetux님의 작품)
+
 2004-12-02  Choe Hwanjin <krisna@kldp.org>
 	* 자판에서 자모 빈도를 $HOME/.nabi/nabi.log에 기록함
 
