--- a/nabi/ChangeLog
+++ b/nabi/ChangeLog
@@ -1,3 +1,6 @@
+2004-12-03  Choe Hwanjin <krisna@kldp.org>
+	* 나비 아이콘 새로 올림 (bluetux님의 작품)
+
 2004-12-02  Choe Hwanjin <krisna@kldp.org>
 	* 자판에서 자모 빈도를 $HOME/.nabi/nabi.log에 기록함
 
