--- a/nabi/ChangeLog
+++ b/nabi/ChangeLog
@@ -1,3 +1,6 @@
+2004-12-04  Choe Hwanjin <krisna@kldp.org>
+	* About 창 업데이트
+
 2004-12-03  Choe Hwanjin <krisna@kldp.org>
 	* 나비 아이콘 새로 올림 (bluetux님의 작품)
 
