--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+나비 0.15
+ * 순아래, 옛글자판 추가
+ * 아이콘 업데이트 (bluetux님 제공)
+ * Tux 테마 추가 (exman님 제공)
+ * 한영 전환, 한자 키 설정 기능 제공
+
 나비 0.14
  * 설정창 제공
  * java 프로그램에서 한글 입력을 더 자연스럽게 수정
