* reset할때 preedit window 숨김 * gtk1 text widget에서 preedit string이 안나오던 문제 수정:   over the spot(PreeditPostion) 방식에서 foreground, background값을 client가   보내주는 값대신 nabi의 설정값을 따름
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@522 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-01-08  Choe Hwanjin <choe.hwanjin@gmail.com>
+	* src/ic.c: reset할때 preedit window 숨김
+	  gtk1 text widget에서 preedit string이 안나오던 문제 수정(over the
+	  spot(PreeditPostion) 방식에서 foreground, background값을 client가
+	  보내주는 값대신 nabi의 설정값을 따름)
+
 2004-12-05  Choe Hwanjin <krisna@kldp.org>
 	* release 0.15
 
