nabi_ic_preedit_show()에서 nabi_ic_preedit_configure를 부름 (PreeditArea 방식에서 preedit window의 위치를 제대로 잡게됨)
git-svn-id: http://kldp.net/svn/nabi/trunk/nabi@523 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2005-01-13  Choe Hwanjin <choe.hwanjin@gmail.com>
+	* src/ic.c: PreeditArea에서 preedit window의 위치를 제대로 잡음
+
 2005-01-08  Choe Hwanjin <choe.hwanjin@gmail.com>
 	* src/ic.c: reset할때 preedit window 숨김
 	  gtk1 text widget에서 preedit string이 안나오던 문제 수정(over the
