nabi.svg 파일으로 로딩실패할 경우 nabi.png를 사용하도록 개선 png 이미지에 mimetype 설정 (현재 파일이 깨진 상태임)
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@535 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-11  Choe Hwanjin <choe.hwanjin@gmail.com>
+	* nabi.png: 새로운 아이콘에 맞게 수정
+	* src/ui.c: nabi.svg 로딩에 실패할경우 nabi.png를 아이콘으로 사용
+
 2006-04-23  Choe Hwanjin <choe.hwanjin@gmail.com>
 	* src/ui.c: 키입력 통계창 출력 루틴 개선
 
