문서 업데이트 ChangeLog 자동 생성룰 추가
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@570 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+나비 0.16
+ * libhangul 적용
+ * 유럽어 자판 지원 기능 구현(프랑스, 독일어 자판)
+ * 테스트 코드 추가
+ * 번역 추가 (독일어: Thanks to Niklaus Giger)
+
 나비 0.15
  * 순아래, 옛글자판 추가
  * 아이콘 업데이트 (bluetux님 제공)
