문서 업데이트
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@599 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+나비 0.17
+ * 다이나믹 이벤트 처리 옵션 추가
+ * 단어 단위 입력 기능 추가
+ * 자동 순서 교정 옵션 추가
+ * over the spot에서 preedit string 그리는 루틴 개선
+ * 한영전환시 마지막 글자가 없어지는 문제 해결
+ * svg 아이콘을 로딩하지 못할때 발생하던 오류 수정
+ * EUC-KR 로켈에서 세벌식 기호 일부가 입력되지 않던 문제 해결
+ * 몇몇 자잘한 버그 수정
+
 나비 0.16
  * libhangul 적용
  * 유럽어 자판 지원 기능 구현(프랑스, 독일어 자판)
