문서 업데이트 ChangeLog 생성룰 개선
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@632 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+나비 0.18
+ * 팔레트 모양 개선
+ * 한자 입력 포맷 지원
+ * 디버그 메시지 출력 개선
+ * 단일 한영 모드 옵션 추가
+ * X 종료시 설정 저장
+
 나비 0.17
  * 다이나믹 이벤트 처리 옵션 추가
  * 단어 단위 입력 기능 추가
