--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+나비 0.19
+ * 라이센스 문제의 소지가 있는 테마 아이콘 제거(MSWindowS, MSWindowsXP, Mac)
+ * 새로운 테마 추가(KingSejong2, Thanks to Stefan Krämer)
+ * 자음으로 기호 입력하는 기능 구현
+ * 자잘한 버그 수정
+
 나비 0.18
  * 팔레트 모양 개선
  * 한자 입력 포맷 지원
