문서 업데이트
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@665 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+나비 0.99.0
+ * 입력 상태 관리 기능을 개선
+ * 한자를 간체자로 입력하는 기능 추가
+ * 프랑스어 자판의 버그 수정(#304587)
+ * 패널이 세로 방향으로 있을때 발생하는 버그 수정(#304681)
+ * systray 프로그램이 갑작스럽게 죽는 경우 처리(#300760)
+
 나비 0.19
  * 라이센스 문제의 소지가 있는 테마 아이콘 제거(MSWindowS, MSWindowsXP, Mac)
  * 새로운 테마 추가(KingSejong2, Thanks to Stefan Krämer)
