문서 업데이트
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@686 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+나비 0.99.1
+ * ic 관리 루틴 개선
+ * 사용하다가 갑자기 프로그램에 입력이 안되는 문제 해결(#300802,#300723)
+   참고: http://bugs.freedesktop.org/show_bug.cgi?id=7869
+ * 입력모드를 영어 상태로 바꾸는 키 설정 기능 추가(#304688)
+ * 몇가지 코드 정리
+
 나비 0.99.0
  * 입력 상태 관리 기능을 개선
  * 한자를 간체자로 입력하는 기능 추가
