문서 업데이트
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@701 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+나비 0.99.2
+ * 독일어 번역 업데이트 (Thanks to Niklaus Giger<niklaus.giger@member.fsf.org>)
+ * 간체자 설정 기본값 버그 수정 (#304722)
+ * 옛글 자판에서 한자 변환 버그 수정 (#304770)
+ * 옛글 자판과 현재글 자판 변환할때 모드 변환 버그 수정(#304770)
+ * 키보드 설정 관련 버그 수정 (#304700)
+ * svg 아이콘을 먼저 사용하도록 함
+ * 몇가지 메모리 릭 수정
+
 나비 0.99.1
  * ic 관리 루틴 개선
  * 사용하다가 갑자기 프로그램에 입력이 안되는 문제 해결(#300802,#300723)
