문서 업데이트: 0.99.3 릴리스 준비
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@720 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+나비 0.99.3
+ * 내부 코드 개선
+ * off the spot, root window에서 사용하는 입력 중인 글자 글꼴 설정 옵션 추가
+ * 한글 모드에서 한영 키가 작동하지 않는 문제 수정(#304811)
+ * 자판 변경후 툴팁이 바뀌지 않는 문제 수정(#305100)
+
 나비 0.99.2
  * 독일어 번역 업데이트 (Thanks to Niklaus Giger<niklaus.giger@member.fsf.org>)
  * 간체자 설정 기본값 버그 수정 (#304722)
