--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+나비 0.99.4
+ * 설정창에 "초기값으로" 변경하는 버튼 추가
+ * 시작할때 한글 모드로 시작할 수 있는 옵션 추가
+ * tray icon을 사용하지 않을 수 있는 옵션 추가
+ * gvim에서 한글 상태에서 커맨드 모드에서 엔터치면 멈추는 문제  해결(#305259)
+ * String conversion 기능 구현(그러나 아직 xlib수준에서 지원하지 않고 있음)
+ * 내부 구현 개선, 버그 수정
+
 나비 0.99.3
  * 내부 코드 개선
  * off the spot, root window에서 사용하는 입력 중인 글자 글꼴 설정 옵션 추가
