문서 업데이트
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@765 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+나비 0.99.5
+ * 로마자 자판 지원 (libhangul 0.0.10 필요)
+ * pango 1.156 이하 버젼 지원 (Centos 5.3 지원)
+ * 버그수정: [#305339] 나비 입력상태 설정 저장 리셋 버그
+
 나비 0.99.4
  * 설정창에 "초기값으로" 변경하는 버튼 추가
  * 시작할때 한글 모드로 시작할 수 있는 옵션 추가
