문서 업데이트
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@771 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+나비 0.99.6
+ * 버그수정: [#305368] 알림영역에 들어가지 않는 문제
+   최근 버젼의 배포판에서 자동으로 알림영역(Notification Area)에 들어가지
+   않던 문제를 해결
+ 
 나비 0.99.5
  * 로마자 자판 지원 (libhangul 0.0.10 필요)
  * pango 1.16 이하 버젼 지원 (Centos 5.3 지원)
