문서 업데이트
git-svn-id: http://kldp.net/svn/nabi/nabi/trunk@801 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+나비 0.99.8
+ * Ubuntu 테마 추가
+ * Colemak 관련 버그 수정 (#315056, #315058)
+ * 동적 자판 목록 업데이트 (libhangul 0.0.12 이상)
+   두벌식 옛한글 지원(#315130), 안마태 자판 지원
+ * Over the spot 모드에서 지정된 fontset을 사용할 수 있도록 하는 옵션 추가
+ * 기본 동작을 system keymap을 무시하고 내장 keymap으로 작동
+   (qwerty가 아닌 자판을 기본 자판으로 설정했을때 문제 처리)
+ * 빌드할때 테마를 지정할 수 있는 옵션 추가
+ * 코드 정리
+
 나비 0.99.7
  * 한자 전용 모드 구현
  * 어플리케이션과 nabi의 locale이 달라도 UTF-8 이면 한글입력이
