--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+나비 0.99.9
+ * 버그 수정: #315977 firefox4 에서 backspace로 글자가 안지워지는 문제 
+ * 버그 수정: #315744 wine 1.2에서 한글 상태에서 공백이 뒤에 입력 되는 문제
+ * GtkStatusIcon 사용
+   - 우분투 10.10에서 트레이 아이콘 배경이 희게 나오는 문제 수정
+
 나비 0.99.8
  * Ubuntu 테마 추가
  * Colemak 관련 버그 수정 (#315056, #315058)
