--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+나비 0.99.10
+ * 오페라 브라우저에서 글자가 두번 입력되는 문제 (#316115)
+   http://kldp.net/projects/nabi/issue/316115
+ * gtk 2.16 이하에서 컴파일 안되는 문제 수정 (#316453)
+   http://kldp.net/projects/nabi/issue/316453
+ * 로마자 자판의 대소문자 처리 문제 수정 (libhangul 0.1.0 이상 필요)
+ * 트레이 아이콘이 로딩되지 않으면 팔레트를 숨길수 없게 함
+
 나비 0.99.9
  * 버그 수정: #315977 firefox4 에서 backspace로 글자가 안지워지는 문제 
  * 버그 수정: #315744 wine 1.2에서 한글 상태에서 공백이 뒤에 입력 되는 문제
