--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+나비 0.99.11
+ * 드보락과 세벌식을 같이 쓸때 '/'가 'ㅁ'으로 입력되는 문제 수정
+ * 영문 자판과 시스템 키맵 사용 옵션에 대한 UI 개선
+
 나비 0.99.10
  * 오페라 브라우저에서 글자가 두번 입력되는 문제 (#316115)
    http://kldp.net/projects/nabi/issue/316115
