--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+나비 1.0.0
+ * 기호 입력 목록 업데이트
+ * 아이콘 테마 추가: malys
+ * 쿼티 자판을 사용하지 않는 경우의 문제 수정
+   http://code.google.com/p/nabi/issues/detail?id=3
+ * 한자 선택 창의 크기를 제한
+
 나비 0.99.11
  * 드보락과 세벌식을 같이 쓸때 '/'가 'ㅁ'으로 입력되는 문제 수정
  * 영문 자판과 시스템 키맵 사용 옵션에 대한 UI 개선
